# jw-library-gtk

./: .gitignore  Cargo.toml  README  com.maxrdz.JWLibraryGTK.json  meson.build  meson_options.txt
data/: com.maxrdz.JWLibraryGTK.Dev.desktop.in.in  com.maxrdz.JWLibraryGTK.desktop.in.in  com.maxrdz.JWLibraryGTK.gschema.xml  com.maxrdz.JWLibraryGTK.metainfo.xml.in.in
po/: POTFILES  meson.build
src/: application.rs  config.rs  globals.rs  jw-library-gtk.gresource.xml  main.rs  master_window.rs  meson.build
src/ui/: master-window.ui
